--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,10 @@ panic = "abort" # Disable stack unwinding on panic
 panic = "abort" # Disable stack unwinding on panic
 
 [dependencies]
-bootloader = "0.11.0"
+bootloader = "0.9.8"
+volatile = "0.2.6"
+spin = "0.9.5"
+
+[dependencies.lazy_static]
+version = "1.4.0"
+features = ["spin_no_std"]
