fix some VSCode exstention errors, added cargo run

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "rust-analyzer.check.targets": ["x86_64-unknown-none"]
-    
+    "rust-analyzer.check.targets": ["x86_64-unknown-none"],
+    "rust-analyzer.check.allTargets": false
 }
