--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,32 @@ edition = "2021"
 authors = ["PitchBlackNights <pitchblacknights@github.com>"]
 
 # Profile used for `cargo build`
-[profile.dev]
-panic = "abort" # Disable stack unwinding on panic
+#[profile.dev]
+#panic = "abort" # Disable stack unwinding on panic
 
 # Profile used for `cargo build --release`
 [profile.release]
 panic = "abort" # Disable stack unwinding on panic
 
+[[test]]
+name = "should_panic"
+harness = false
+
 [dependencies]
 bootloader = "0.9.8"
 volatile = "0.2.6"
 spin = "0.9.5"
+x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
 
 [dependencies.lazy_static]
 version = "1.4.0"
 features = ["spin_no_std"]
+
+[package.metadata.bootimage]
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
+    "-display", "none"
+]
+test-timeout = 300 # In seconds
+test-success-exit-code = 33 # Map exit code 33 to cargo exit code 0
