--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    // These are require unless you want rust-analyzer to freak out, and annoy the crap out of you
     "rust-analyzer.check.targets": ["x86_64-unknown-none"],
     "rust-analyzer.check.allTargets": false
 }
