--- a/source/Cargo.toml
+++ b/source/Cargo.toml
@@ -2,35 +2,22 @@
 name = "lupine-os"
 version = "0.1.0"
 edition = "2021"
-authors = ["PitchBlackNights <pitchblacknights@github.com>"]
+authors = [
+    "PitchBlackNights <pitchblacknights777@gmail.com>",
+    "wsDev0 <wsDev0@github.com>"
+]
 
 # Profile used for `cargo build`
 #[profile.dev]
 #panic = "abort" # Disable stack unwinding on panic
 
 # Profile used for `cargo build --release`
-[profile.release]
-panic = "abort" # Disable stack unwinding on panic
+#[profile.release]
+#panic = "abort" # Disable stack unwinding on panic
 
-[[test]]
-name = "should_panic"
-harness = false
+#[[test]]
 
-[dependencies]
-bootloader = "0.9.8"
-volatile = "0.2.6"
-spin = "0.9.5"
-x86_64 = "0.14.2"
-uart_16550 = "0.2.0"
+#[dependencies]
 
-[dependencies.lazy_static]
-version = "1.4.0"
-features = ["spin_no_std"]
-
-[package.metadata.bootimage]
-test-args = [
-    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
-    "-display", "none"
-]
-test-timeout = 300 # In seconds
-test-success-exit-code = 33 # Map exit code 33 to cargo exit code 0
+#test-timeout = 300 # In seconds
+#test-success-exit-code = 33 # Map exit code 33 to cargo exit code 0
