--- a/source/Cargo.toml
+++ b/source/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
 
 # Profile used for `cargo build`
-#[profile.dev]
-#panic = "abort" # Disable stack unwinding on panic
+[profile.dev]
+panic = "abort" # Disable stack unwinding on panic
 
 # Profile used for `cargo build --release`
 [profile.release]
