--- a/source/Cargo.toml
+++ b/source/Cargo.toml
@@ -14,7 +14,7 @@ panic = "abort" # Disable stack unwinding on panic
 
 
 [dependencies]
-bootloader = "0.9.8"
+libc = "0.2.142"
 volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.14.2"
