--- a/source/Cargo.toml
+++ b/source/Cargo.toml
@@ -2,7 +2,7 @@
 name = "lupine-os"
 version = "0.0.1"
 edition = "2021"
-authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
+authors = ["PitchBlackNights <pitchblacknights@proton.me>", "Wesley Schell <wesley.schell.sh@proton.me>"]
 
 # Profile used for `cargo build`
 [profile.dev]
@@ -21,6 +21,7 @@ x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
+bootloader_api = "0.11.3"
 
 [dependencies.lazy_static]
 version = "1.0"
