Simple readme changes, and other misc changes

--- a/source/Cargo.toml
+++ b/source/Cargo.toml
@@ -21,6 +21,7 @@ x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
+# libc = "0.2.142"
 
 [dependencies.lazy_static]
 version = "1.0"
