--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
-    // These are require unless you want rust-analyzer to freak out, and annoy the crap out of you
-    "rust-analyzer.check.targets": ["x86_64-unknown-none"],
-    "rust-analyzer.check.allTargets": false,
-    "terminal.integrated.cwd": "./source"
+  "editor.formatOnSave": true,
+  "editor.rulers": [100],
+  "rust-analyzer.cargo.target": "aarch64-unknown-none-softfloat",
+  "rust-analyzer.cargo.features": ["bsp_rpi3"],
+  "rust-analyzer.checkOnSave.allTargets": false,
+  "rust-analyzer.checkOnSave.extraArgs": ["--bins"],
+  "rust-analyzer.lens.debug": false,
+  "rust-analyzer.lens.run": false,
+  "rust-analyzer.showUnlinkedFileNotification": false
 }
