Tutorial 02 - Runtime init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lupine-os"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
 edition = "2021"
 
@@ -21,3 +21,7 @@ path = "src/main.rs"
 ##--------------------------------------------------------------------------------------------------
 
 [dependencies]
+
+# Platform specific dependencies
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+aarch64-cpu = { version = "9.x.x" }
