--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,4 +51,8 @@
         "editor.insertSpaces": true,
         "editor.tabSize": 2,
     },
+    "cSpell.words": [
+        "MMIO",
+        "Raspberrys"
+    ],
 }
