--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lupine-os"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
 edition = "2021"
 
@@ -9,8 +9,8 @@ lto = true
 
 [features]
 default = []
-bsp_rpi3 = []
-bsp_rpi4 = []
+bsp_rpi3 = ["tock-registers"]
+bsp_rpi4 = ["tock-registers"]
 
 [[bin]]
 name = "kernel"
@@ -21,6 +21,9 @@ path = "src/main.rs"
 ##--------------------------------------------------------------------------------------------------
 
 [dependencies]
+
+# Optional dependencies
+tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true}
 
 # Platform specific dependencies
 [target.'cfg(target_arch = "aarch64")'.dependencies]
