add .vscode back to root folder

--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -59,6 +59,7 @@
         "GPIO",
         "GPPUD",
         "GPPUDCLK",
+        "miniterm",
         "MMIO",
         "NUMBITS",
         "PUDCLK",
