--- a/chainloader/.vscode/settings.json
+++ b/chainloader/.vscode/settings.json
@@ -28,7 +28,7 @@
         "editor.tabSize": 4
     },
     "[makefile]": {
-        "editor.insertSpaces": false,
+        "editor.insertSpaces": true,
         "editor.tabSize": 8
     },
     "[ruby]": {
