JTAG boot stuff & others

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,4 +92,5 @@
         "Gemfile.lock": true
     },
     "explorerExclude.backup": {},
+    "rust-analyzer.showUnlinkedFileNotification": false,
 }
