--- a/JTAG_boot/Makefile
+++ b/JTAG_boot/Makefile
@@ -1,4 +1,4 @@
-## SPDX-License-Identifier: MIT OR Apache-2.0
+## SPDX-License-Identifier: MIT
 ##
 ## Copyright (c) 2018-2023 Andre Richter <andre.o.richter@gmail.com>
 
