--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
           toolchain: nightly
           override: true
           components: clippy
+      - name: Install OS target
+        run: rustup target add aarch64-unknown-none-softfloat
       - name: Install needed crates
         uses: actions-rs/cargo@v1
         with:
